<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- AppBar Block -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/app_color">

        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/img_menu"

            android:text="@string/app_name"
            android:textColor="@color/white" />



    </RelativeLayout>

    <!-- Body Block -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Menu block -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/gray"
            android:orientation="vertical">

            <!-- First row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!-- Account Menu -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="71dp"
                        android:layout_height="66dp"
                        android:src="@drawable/ic_search" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#F8F6F6"
                        android:text="@string/search"
                        android:textColor="@color/white"
                        tools:text="@string/search" />
                </LinearLayout>


                <!-- Payments Menu -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="71dp"
                        android:layout_height="66dp"
                        android:background="#FFFDFD"
                        android:src="@drawable/ic_acc"
                        android:visibility="visible" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/white"
                        tools:text="@string/account" />
                </LinearLayout>

            </LinearLayout>

            <!-- Second row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <!-- Cash to ATM Menu -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="71dp"
                        android:layout_height="66dp"
                        android:src="@drawable/ic_health" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/health"
                        android:textColor="@color/white" />
                </LinearLayout>

                <!-- Virtual card Menu -->
                <LinearLayout
                    android:layout_width="71dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="52dp"
                        android:layout_height="66dp"
                        android:clickable="true"
                        android:src="@drawable/ic_ann" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ann"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

            <!-- Third row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!-- Scan QR Menu -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="71dp"
                        android:layout_height="66dp"
                        android:src="@drawable/ic_list" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/doctors"
                        android:textColor="@color/white" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="71dp"
                        android:layout_height="66dp"
                        android:src="@drawable/ic_fav" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ann"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>